@@ -19,7 +19,7 @@ Set standard to `false`. `MINECRAFT_EULA` has to be set to `true` by the user to
 `MINECRAFT_HOME` default set to `/opt/minecraft`. This is the directory where the server files and world is located. I would not change this variable.
 
 ### MINECRAFT_OPTS
-`MINECRAFT_OPTS` default set to the following extra parameters `-server -Xmx2048m -XX:MaxPermSize=512m -XX:+UseParNewGC -XX:+UseConcMarkSweepGC`. You could change this if you desire more or less memory for the server.
+`MINECRAFT_OPTS` default set to the following extra parameters `-server -Xmx2048m`. You could change this if you desire more or less memory for the server.
 
 ### FORCE_UPDATE
 `FORCE_UPDATE` default set to 'false' give you the option to update the .jar of the server. By changing `FORCE_UPDATE` to 'true' a new .jar will be made on startup, and the old .jar will be removed. An .jar update can also be forced by removing the earlier mentioned version file from the `MINECRAFT_HOME` directory. 
